Stop gif from extending beyond viewport on smaller devices

--- a/css/fig.css
+++ b/css/fig.css
@@ -48,6 +48,10 @@ pre code {
   background: none;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
